--- a/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
+++ b/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\ebiton\source\repos\Aark.Netatmo.Client\Aark.Netatmo.Client\Aark.Netatmo.Client.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\edoua\Source\Repos\Aarklendoia\Aark.Netatmo.SDK\Aark.Netatmo.SDK\Aark.Netatmo.SDK.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
