--- a/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
+++ b/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
@@ -5,7 +5,7 @@
     <Description>Provides full access to the Netatmo API for weather stations, energy management and detection cameras.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>Aarklendoïa</Authors>
-    <PackageVersion>1.0.0-alpha5</PackageVersion>
+    <PackageVersion>1.0.0-alpha</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
