--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
   inputs:
     command: 'build'
     arguments: '--configuration $(buildConfiguration)'
-    projects: 'Aark.Netatmo.Client/Aark.Netatmo.Client.csproj'
+    projects: 'Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj'
 
 # The second task is dotnet pack command again pointing to the csproj file
 # The nobuild means the project will not be compiled before running pack, because its already built in above step
@@ -34,7 +34,7 @@ steps:
   inputs:
     command: 'pack'
     arguments: '--configuration $(buildConfiguration)'
-    packagesToPack: 'Aark.Netatmo.Client/Aark.Netatmo.Client.csproj'
+    packagesToPack: 'Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj'
     nobuild: true
     versioningScheme: 'off'
 
