--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,61 +16,61 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
-#The build has 3 seperate tasks run under 1 step
-steps:
+- job: Building
+    steps:
+    - task: DotNetCoreCLI@2
+      displayName: 'Dotnet build'
+      inputs:
+        command: 'build'
+        arguments: '--configuration $(buildConfiguration)'
+        projects: 'Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj'
 
-# Download the appsettings.json file stocked in the secure library of Azure DevOps.
-- task: DownloadSecureFile@1
-  displayName: 'Get appsettings.json from secure file'
-  name: AppSettings
-  inputs:
-    secureFile: 'appsettings.json'
+- job: Testing
+  dependsOn: Building
+  condition: succeeded()
+  steps:
+    # Download the appsettings.json file stocked in the secure library of Azure DevOps.
+    - task: DownloadSecureFile@1
+      displayName: 'Get appsettings.json from secure file'
+      name: AppSettings
+      inputs:
+        secureFile: 'appsettings.json'
 
-# Copy the appsettings.json file in the output directory.
-- task: CopyFiles@2
-  displayName: 'Copy appsettings.json to the output directory'
-  inputs: 
-    sourceFolder: '$(Agent.TempDirectory)'
-    content: 'appsettings.json'
-    targetFolder: '$(System.DefaultWorkingDirectory)\Aark.Netatmo.SDK.Test\bin\Debug\netcoreapp2.2\'
+    # Copy the appsettings.json file in the output directory.
+    - task: CopyFiles@2
+      displayName: 'Copy appsettings.json to the output directory'
+      inputs: 
+        sourceFolder: '$(Agent.TempDirectory)'
+        content: 'appsettings.json'
+        targetFolder: '$(System.DefaultWorkingDirectory)\Aark.Netatmo.SDK.Test\bin\Debug\netcoreapp2.2\'
 
-# The first task is the dotnet command build, pointing to our csproj file
-- task: DotNetCoreCLI@2
-  displayName: 'Dotnet build'
-  inputs:
-    command: 'build'
-    arguments: '--configuration $(buildConfiguration)'
-    projects: 'Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj'
+    # Run tests and collect of coverage.
+    - script: dotnet test Aark.Netatmo.SDK.Test/Aark.Netatmo.SDK.Test.csproj --logger trx --collect "Code coverage"
+    - task: PublishTestResults@2
+      inputs:
+        testRunner: VSTest
+        testResultsFiles: '**/*.trx'
 
-# Run tests and collect of coverage.
-- script: dotnet test Aark.Netatmo.SDK.Test/Aark.Netatmo.SDK.Test.csproj --logger trx --collect "Code coverage"
-- task: PublishTestResults@2
-  inputs:
-    testRunner: VSTest
-    testResultsFiles: '**/*.trx'
+- job: Packaging
+  dependsOn: Testing
+  condition: succeeded()
+  steps:
+    - task: DotNetCoreCLI@2
+      displayName: "Dotnet pack"
+      inputs:
+        command: 'pack'
+        arguments: '--configuration $(buildConfiguration)'
+        packagesToPack: 'Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj'
+        nobuild: true
+        versioningScheme: 'off'
 
-# The next task is dotnet pack command again pointing to the csproj file
-# The nobuild means the project will not be compiled before running pack, because its already built in above step
-- task: DotNetCoreCLI@2
-  displayName: "Dotnet pack"
-  inputs:
-    command: 'pack'
-    arguments: '--configuration $(buildConfiguration)'
-    packagesToPack: 'Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj'
-    nobuild: true
-    versioningScheme: 'off'
-
-# The last task is a nuget command, nuget push
-# This will push any .nupkg files to the 'TestFeed' artifact feed
-# allowPackageConflicts allows us to build the same version and not throw an error when trying to push
-# instead it just ingores the latest package unless the version changes
-- task: NuGetCommand@2
-  displayName: 'Nuget push'
-  inputs:
-    command: 'push'
-    feedsToUse: 'select'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-    nuGetFeedType: 'internal'
-    publishVstsFeed: 'Aarklendoia.Feed'
-    versioningScheme: 'off'
-    allowPackageConflicts: true
+    - task: NuGetCommand@2
+      displayName: 'Nuget push'
+      inputs:
+        command: 'push'
+        feedsToUse: 'select'
+        packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+        nuGetFeedType: 'internal'
+        publishVstsFeed: 'Aarklendoia.Feed'
+        versioningScheme: 'off'
+        allowPackageConflicts: true
