--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,16 +56,11 @@ jobs:
       continueOnError: true
       inputs:
         testSelector: 'testAssemblies'
-        testAssemblyVer2: |
-          **\*Test.dll
-          **\*test*.dll
-          !**\*TestAdapter.dll
-          !**\obj\**
+        testAssemblyVer2: **\Aark.Netatmo.SDK.Test.dll
         searchFolder: '$(System.DefaultWorkingDirectory)'
         codeCoverageEnabled: true
 
     # Run tests and collect of coverage.
-#    - script: dotnet test Aark.Netatmo.SDK.Test/Aark.Netatmo.SDK.Test.csproj --logger trx --collect "Code coverage"
     - task: PublishTestResults@2
       inputs:
         testRunner: VSTest
