--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,8 @@ jobs:
       continueOnError: true
       inputs:
         testSelector: 'testAssemblies'
-        testAssemblyVer2: **\Aark.Netatmo.SDK.Test.dll
+        testAssemblyVer2: | 
+          **\Aark.Netatmo.SDK.Test.dll
         searchFolder: '$(System.DefaultWorkingDirectory)'
         codeCoverageEnabled: true
 
