--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ jobs:
       inputs: 
         sourceFolder: '$(Agent.TempDirectory)'
         contents: 'appsettings.json'
-        targetFolder: '$(System.DefaultWorkingDirectory)\Aark.Netatmo.SDK.Test\bin\$(buildConfiguration)\netcoreapp2.2\'
+        targetFolder: '$(System.DefaultWorkingDirectory)\Aark.Netatmo.SDK.Test\bin\Debug\netcoreapp2.2\'
 
     - task: DotNetCoreCLI@2
       displayName: Execute tests
