--- a/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
+++ b/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
@@ -7,6 +7,8 @@
     <Authors>Aarklendoïa</Authors>
     <PackageVersion>1.0.0-alpha2</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageProjectUrl>https://github.com/Aarklendoia/Aark.Netatmo.SDK</PackageProjectUrl>
+    <Version>1.0.0-alpha2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7">
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
