--- a/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
+++ b/Aark.Netatmo.SDK/Aark.Netatmo.SDK.csproj
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/Aarklendoia/Aark.Netatmo.SDK</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0-alpha2</Version>
+    <Version>1.0.0-alpha3</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <IncludeSymbols>true</IncludeSymbols>
+    <IncludeSymbols>false</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
